# Lexi

./: CMakeLists.txt  Composition.h  Compositor.h  Glyph.h  README.md  main.cpp  todo.txt
include/: Commands.h  Compositor.h  EventManager.h  Events.h  Glyph.h  GuiFactory.h  Lexi.h  Logger.h  Original.h  Types.h  Utils.h  Window.h
include/_linux/: LinuxCommands.h  LinuxEvents.h  LinuxGuiFactory.h  LinuxOriginal.h  LinuxWindowImpl.h  LinuxWriter.h
src/: Commands.cpp  EventManager.cpp  Events.cpp  Glyph.cpp  GuiFactory.cpp  Original.cpp  Utils.cpp  Window.cpp
src/_linux/: LinuxEvents.cpp  LinuxGuiFactory.cpp  LinuxOriginal.cpp  LinuxWindowImpl.cpp  LinuxWriter.cpp
test/: test_abort.cpp  test_button_event_handler.cpp  test_button_init.cpp  test_catch_reference.cpp  test_command_list.cpp  test_cpp.cpp  test_draw_text.c  test_draw_text.cpp  test_gui_factory.cpp  test_include.cpp  test_linux_event_window.cpp  test_linux_window_draw_text.cpp  test_logger.cpp  test_pass_value.cpp  test_press_button.cpp  test_rander_queue.cpp  test_sdl.cpp  test_sdl_event.cpp  test_sdl_event_example.c  test_sdl_leak.cpp  test_thread_rander.cpp  test_tips_window.cpp  test_window.cpp  test_window_draw.cpp  test_window_linux_impl.cpp
